--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "TokenOptions": {
+    "Audience": "engin@engin.com",
+    "Issuer": "engin@engin.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+
+
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +17,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
